# receipt-processor-challenge

./: .dockerignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yaml  pyproject.toml
src/: __init__.py  main.py
src/models/: __init__.py  item.py  points_response.py  process_receipt_response.py  receipt.py
src/routers/: __init__.py  receipts.py
src/services/: __init__.py  points_rules.py  receipt_processing_service.py
tests/: test_receipt_processing_service.py
